@@ -1,3 +1,11 @@
+2005-07-13  Benoît Dejean  <TazForEver@dlfp.org>
+
+	* drive-button.c: (gvm_run_command):
+	
+	Added missing #include.
+	Commented dead code.
+	Fixed possible leak in gvm_run_command.
+	
 2005-07-13  Davyd Madeley  <davyd@madeley.id.au>
 
 	* drive-button.c: More extended media handling from Emmanuel Touzery.
